docs(docs-infra): Fix toggle button in dark mode
Fix visibility toggle button in dark mode

Fix #66049

--- a/adev/src/content/examples/animations/src/app/enter-and-leave/leave-binding.css
+++ b/adev/src/content/examples/animations/src/app/enter-and-leave/leave-binding.css
@@ -22,3 +22,11 @@
   transform: translateY(20px);
   transition: opacity 500ms ease-out, transform 500ms ease-out;
 }
+
+.btn-in-dark-mode {
+  background: transparent;
+  border: 1px solid white;
+  color: white;
+  padding: 10px 24px;
+  border-radius: 8px;
+}
